[package]
name = "braid"
version = "0.1.0"
authors = [
  "David Ruescas <david@nvotes.com>",
  "Eduardo Robles <edulix@nvotes.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rug = {version = "1.12", features = ["integer", "rand", "serde"]}
curve25519-dalek = {version = "3.0.0", features = ["serde"]}
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
aes = "0.6.0"
block-modes = "0.7.0"
sha2 = "0.9.1"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.5"
bincode = "1.3.1"
crepe = "0.1.5"
git2 = "0.13.17"
walkdir = "2.3.1"
tempfile = "3.1.0"
uuid = { version="0.8.1", features = ["v4"]}
hex-literal = "0.3.1"
hex = "0.4.2"
generic-array = "0.14.4"
base64 = "0.13.0"
strum = { version = "0.20", features = ["derive"] }
num_enum = "0.5.1"
log = "0.4.11"
simplelog = "0.9.0"
quick-error = "2.0.0"
# clingo = { version = "0.6", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5.0"
regex = "1"
cursive = "0.15"
textplots = "0.5.3"
chrono = "0.4"

[[bench]]
name = "shuffle_bench"
harness = false

[[bench]]
name = "signature_bench"
harness = false

[[bench]]
name = "hash_file_bench"
harness = false

[[bench]]
name = "serialize_bench"
harness = false

# [[bench]]
# name = "hash_bench"
# harness = false
