[package]
authors = ['chenglin@onchain.com']
edition = '2018'
name = 'ontdid-runtime'
version = '0.1.0'

[dependencies]
serde = { version = '1.0.101', optional = true, features = ['derive'] }
codec = { package = 'parity-scale-codec', version = '1.3.0', default-features = false, features = ['derive'] }

# OntDID dependencies
bitflags = { version = '1.2.1', default-features = false }
frame-system-rpc-runtime-api = {git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master'}
pallet-indices = {git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master'}
sp-arithmetic = {git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master'}
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }

# OntDID collator
ontdid-primitives = { path = '../primitives',  default-features = false }

# did pallet
did= { path= '../pallets/did', default-features = false }

# Substrate dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }

frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }

# Cumulus dependencies
cumulus-runtime = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'master' }
cumulus-parachain-upgrade = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'master' }
cumulus-primitives = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'master' }
parachain-info = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'master' }

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', version = '2.0.0'}
[features]
default = ['std']
std = [
	'sp-arithmetic/std',
	'pallet-indices/std',
	'frame-system-rpc-runtime-api/std',
	'sp-io/std',
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'parachain-info/std',
	'ontdid-primitives/std',
	'cumulus-runtime/std',
	'cumulus-parachain-upgrade/std',
	'cumulus-primitives/std',
]
